design and func

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,12 @@
         continue.</strong
       >
     </noscript>
-    <div id="app"></div>
+    <div id="app" style="background-color: gray;">
+
+    </div>
     <!-- built files will be auto injected -->
   </body>
+  <style>
+    
+  </style>
 </html>
